force-app/main/default/objects/CCS_Batch_Participant__c/CCS_Batch_Participant__c.object-meta.xml
<CustomObject>
    <label>Batch Participant</label>
    <nameField>
        <displayFormat>BP-{0000000000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>