force-app/main/default/objects/CCS_Batch_Participant__c/fields/Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Batch_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Class</label>
    <referenceTo>CCS_Batch_Class__c</referenceTo>
    <relationshipLabel>Batch Participants</relationshipLabel>
    <relationshipName>Batch_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>