force-app/main/default/objects/CCS_Batch_Participant__c/fields/Evaluation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Notes__c</fullName>
    <label>Evaluation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>