force-app/main/default/objects/CCS_Batch_Participant__c/fields/Mastery_Status__c.field-meta.xml
<CustomField>
    <fullName>Mastery_Status__c</fullName>
    <label>Mastery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Not Evaluated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>