force-app/main/default/objects/CCS_Batch_Participant__c/fields/Offering_Id_Batch_Participant__c.field-meta.xml
<CustomField>
    <fullName>Offering_Id_Batch_Participant__c</fullName>
    <label>Offering Id Batch Participant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>